--- a/markdown/sfs.Rmd
+++ b/markdown/sfs.Rmd
@@ -17,6 +17,7 @@ library(cowplot)
 #### With transitions
 
 ```{bash eval=F}
+## Original setup
 nohup bash /workdir/genomic-data-analysis/scripts/get_heterozygosity.sh \
 /workdir/batch-effect/ \
 /workdir/batch-effect/sample_lists/bam_list_realigned.txt \
@@ -25,12 +26,35 @@ nohup bash /workdir/genomic-data-analysis/scripts/get_heterozygosity.sh \
 10000 \
 20 \
 30 \
-> /workdir/batch-effect/nohups/get_heterozygosity_notrans.nohup &
+> /workdir/batch-effect/nohups/get_heterozygosity.nohup &
+## Relaxed filter, LG03 only
+nohup bash /workdir/batch-effect/scripts/get_heterozygosity_per_lg.sh \
+/workdir/batch-effect/ \
+/workdir/batch-effect/sample_lists/bam_list_realigned.txt \
+/workdir/cod/reference_seqs/gadMor3.fasta \
+2 \
+10000 \
+20 \
+30 \
+LG03 \
+> /workdir/batch-effect/nohups/get_heterozygosity_lg03_relaxed.nohup &
+## More stringent quality and depth filter, LG03 only
+nohup bash /workdir/batch-effect/scripts/get_heterozygosity_per_lg.sh \
+/workdir/batch-effect/ \
+/workdir/batch-effect/sample_lists/bam_list_realigned.txt \
+/workdir/cod/reference_seqs/gadMor3.fasta \
+2 \
+10 \
+33 \
+30 \
+LG03 \
+> /workdir/batch-effect/nohups/get_heterozygosity_lg03_stringent.nohup &
 ```
 
 #### Without transitions
 
 ```{bash eval=F}
+## old
 nohup bash /workdir/cod/greenland-cod/scripts/get_heterozygosity_notrans.sh \
 /workdir/batch-effect/ \
 /workdir/batch-effect/sample_lists/bam_list_realigned.txt \
@@ -40,18 +64,41 @@ nohup bash /workdir/cod/greenland-cod/scripts/get_heterozygosity_notrans.sh \
 20 \
 30 \
 > /workdir/batch-effect/nohups/get_heterozygosity_notrans.nohup &
+## Relaxed filter, LG03 only
+nohup bash /workdir/batch-effect/scripts/get_heterozygosity_notrans_per_lg.sh \
+/workdir/batch-effect/ \
+/workdir/batch-effect/sample_lists/bam_list_realigned.txt \
+/workdir/cod/reference_seqs/gadMor3.fasta \
+2 \
+10000 \
+20 \
+30 \
+LG03 \
+> /workdir/batch-effect/nohups/get_heterozygosity_notrans_lg03_relaxed.nohup &
+## More stringent quality and depth filter, LG03 only
+nohup bash /workdir/batch-effect/scripts/get_heterozygosity_notrans_per_lg.sh \
+/workdir/batch-effect/ \
+/workdir/batch-effect/sample_lists/bam_list_realigned.txt \
+/workdir/cod/reference_seqs/gadMor3.fasta \
+2 \
+10 \
+33 \
+30 \
+LG03 \
+> /workdir/batch-effect/nohups/get_heterozygosity_notrans_lg03_stringent.nohup &
 ```
 
 #### Summarize and plot
 
-```{r eval=F}
+###### Genome wide, relaxed depth and mapping quality filter
+
+```{r eval=T, fig.width=10}
 sample_table <- read_tsv("../sample_lists/sample_table_merged.tsv")
 for (i in 1:nrow(sample_table)){
   sample_seq_id <- sample_table$sample_seq_id[i]
   sample_id <- sample_table$sample_id_corrected[i]
   population <- sample_table$population[i]
   data_type <- sample_table$data_type[i]
-  island_shore <- sample_table$island_shore[i]
   if (str_detect(data_type,"pe")){
     path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_minq20_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10000_minq20_minmapq30")
   } else {
@@ -61,12 +108,12 @@ for (i in 1:nrow(sample_table)){
     janitor::clean_names() %>%
     dplyr::select(chr, t_w, n_sites) %>%
     filter(str_detect(chr, "LG")) %>%
-    mutate(sample_id=sample_id, population=population, island_shore=island_shore, type="Including transitions")
+    mutate(sample_id=sample_id, population=population, data_type=data_type, type="Including transitions")
   theta_notrans <- read_tsv(str_c(path, "_notrans.average_thetas.tsv.pestPG")) %>% 
     janitor::clean_names() %>%
     dplyr::select(chr, t_w, n_sites) %>%
     filter(str_detect(chr, "LG")) %>%
-    mutate(sample_id=sample_id, population=population, island_shore=island_shore, type="Excluding transitions")
+    mutate(sample_id=sample_id, population=population, data_type=data_type, type="Excluding transitions")
   theta_combined <- bind_rows(theta, theta_notrans)
   if(i==1){
     theta_final <- theta_combined
@@ -78,16 +125,67 @@ for (i in 1:nrow(sample_table)){
 het <- theta_final %>%
   filter(! is.na(chr)) %>% 
   filter(! chr %in% c("LG01", "LG02", "LG07", "LG12")) %>%
-  group_by(sample_id, population, island_shore, type) %>%
+  group_by(sample_id, population, data_type, type) %>%
   summarise(sum_t_w=sum(t_w), sum_n_sites=sum(n_sites), heterozygosity=sum_t_w/sum_n_sites)
 set.seed(42)
 het %>%
-  ggplot(aes(x=population, y=heterozygosity, color=island_shore)) +
+  ggplot(aes(x=population, y=heterozygosity)) +
   geom_boxplot(outlier.alpha = 0) +
-  geom_jitter(height = 0) +
+  geom_jitter(aes(color=data_type), height = 0) +
   facet_wrap(~type) +
   coord_flip() +
-  theme_cowplot() +
-  theme(legend.position = "none")
+  theme_cowplot()
+```
 
+###### LG03 only, relaxed vs. stringent depth and mapping quality filter
+
+```{r eval=TRUE, fig.width=10, fig.height=8}
+for (i in 1:nrow(sample_table)){
+  sample_seq_id <- sample_table$sample_seq_id[i]
+  sample_id <- sample_table$sample_id_corrected[i]
+  population <- sample_table$population[i]
+  data_type <- sample_table$data_type[i]
+  if (str_detect(data_type,"pe")){
+    path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10000_minq20_minmapq30")
+    path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq33_minmapq30")
+  } else {
+    path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10000_minq20_minmapq30")
+    path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq33_minmapq30")
+  }
+  het_relaxed <- read_delim(str_c(path, "_LG03.ml"), col_names = F, delim = " ") %>% 
+    transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
+    mutate(sample_id=sample_id, population=population, data_type=data_type, tran="Including transitions", filter="relaxed")
+  het_relaxed_notrans <- read_delim(str_c(path, "_notrans_LG03.ml"), col_names = F, delim = " ") %>% 
+    transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
+    mutate(sample_id=sample_id, population=population, data_type=data_type, tran="Excluding transitions", filter="relaxed")
+  het_stringent <- read_delim(str_c(path_stringent, "_LG03.ml"), col_names = F, delim = " ") %>% 
+    transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
+    mutate(sample_id=sample_id, population=population, data_type=data_type, tran="Including transitions", filter="stringent")
+  het_stringent_notrans <- read_delim(str_c(path_stringent, "_notrans_LG03.ml"), col_names = F, delim = " ") %>% 
+    transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
+    mutate(sample_id=sample_id, population=population, data_type=data_type, tran="Excluding transitions", filter="stringent")
+  het_combined <- bind_rows(het_relaxed, het_relaxed_notrans, het_stringent, het_stringent_notrans)
+  if(i==1){
+    het_final <- het_combined
+  } else {
+    het_final <- bind_rows(het_final, het_combined)
+  }
+}
+## Calculate average heterozygosity while filtering out inversions
+set.seed(42)
+het_final %>%
+  ggplot(aes(x=population, y=het)) +
+  geom_boxplot(outlier.alpha = 0) +
+  geom_jitter(aes(color=data_type), height = 0, size=0.8) +
+  facet_grid(filter~tran) +
+  coord_flip() +
+  theme_cowplot() +
+  theme(panel.background=element_rect(colour="black", size=0.8))
+het_final %>%
+  ggplot(aes(x=n_sites, y=het, color=data_type)) +
+  geom_point(height = 0, size=1) +
+  geom_smooth(se = F, color="black", aes(group=data_type)) +
+  facet_grid(filter~tran) +
+  theme_cowplot() +
+  theme(panel.background=element_rect(colour="black", size=0.8))
 ```
