update markdown files (many need to be cleaned still)

--- a/markdown/fst.Rmd
+++ b/markdown/fst.Rmd
@@ -13,7 +13,7 @@ library(RcppCNPy)
 library(cowplot)
 ```
 
-## Get saf, maf, and Fst
+## Get saf, maf, and Fst with ANGSD
 
 #### Sliding window trimmed PE samples (new)
 
@@ -26,42 +26,50 @@ nohup bash /workdir/genomic-data-analysis/scripts/get_maf_per_pop.sh \
 bam_list_realigned_ \
 /workdir/cod/reference_seqs/gadMor3.fasta \
 /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.txt \
-2 661 2 20 \
+20 661 20 20 \
 > /workdir/batch-effect/nohups/get_maf_per_pop.nohup &
 ## Fst
 nohup bash /workdir/genomic-data-analysis/scripts/get_fst.sh \
-/workdir/batch-effect/angsd/popminind2/ \
+/workdir/batch-effect/angsd/popminind20/ \
 /workdir/batch-effect/sample_lists/sample_table_merged.tsv \
 6 \
-_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind2 \
+_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20 \
 > /workdir/batch-effect/nohups/get_fst.nohup &
+## Get depth count from se samples without a mapping quality filter
+cd /workdir/batch-effect
+nohup /workdir/programs/angsd0.931/angsd/angsd \
+-b sample_lists/bam_list_per_pop/bam_list_realigned_se.txt \
+-anc /workdir/cod/reference_seqs/gadMor3.fasta \
+-out angsd/popminind2/bam_list_realigned_se_anymapq \
+-doCounts 1 -doDepth 1 -dumpCounts 1 \
+-P 16 -setMinDepth 2 -minInd 2 -minQ 20 \
+-sites /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.txt \
+-rf /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.chrs \
+>& nohups/get_depth_anymapq_bam_list_realigned_se.log &
 ```
 
 
-## Fst with sliding window trimmed PE samples
+## Plot Fst with sliding window trimmed PE samples
 
-#### Read in Fst and MAF results
+#### Without filtering
 
 ```{r eval=T, fig.width=15, fig.height=3}
-###### original setup
-maf_se <- read_tsv("../angsd/popminind2/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind2.mafs.gz") %>%
+maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz") %>%
   transmute(lg = chromo, position = position, major=major, minor = minor, se_maf = knownEM, se_nind=nInd)
-maf_pe <- read_tsv("../angsd/popminind2/pe_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind2.mafs.gz")%>%
+maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz")%>%
   transmute(lg = chromo, position = position, major=major, minor = minor, pe_maf = knownEM, pe_nind=nInd)
-fst <- read_tsv("../angsd/popminind2/pe_se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind2.alpha_beta.txt", col_names = F) %>%
+fst <- read_tsv("../angsd/popminind20/pe_se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.alpha_beta.txt", col_names = F) %>%
   mutate(X5=X3/X4) %>%
   transmute(lg=X1, position = X2, alpha=X3, beta=X4, fst = X5)
 maf_joined <- inner_join(maf_se, maf_pe) %>%
   left_join(fst) %>%
-  filter(se_nind>=20, pe_nind >=20) %>%
+  #filter(se_nind>=20, pe_nind>=20) %>%
   mutate(delta = abs(se_maf- pe_maf)) %>%
   arrange(desc(fst))
 summarise(maf_joined, average_fst = sum(alpha)/sum(beta))
 maf_joined %>% filter(se_maf > 0.01 & se_maf<0.99) %>% summarise(average_fst = sum(alpha)/sum(beta))
 head(maf_joined)
 ```
-
-#### Plot Fst
 
 ```{r eval=T, fig.width=15, fig.height=3}
 maf_joined %>%
@@ -71,6 +79,67 @@ maf_joined %>%
   facet_grid(~lg, scales = "free_x", space = "free_x") +
   theme_cowplot() +
   theme(panel.spacing = unit(0.0, "lines"))
+```
+
+#### Check correlation with read depth distribution before mapping quality filter
+
+```{r eval=T, fig.width=10, fig.height=3}
+anymapq_depth <- read_tsv("../angsd/popminind2/bam_list_realigned_se_anymapq.pos.gz") %>%
+  rename(lg=chr, position=pos, total_depth_anymapq=totDepth)
+mapq20_depth <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.pos.gz") %>%
+  rename(lg=chr, position=pos, total_depth_mapq20=totDepth)
+depth <- inner_join(anymapq_depth, mapq20_depth) %>%
+  mutate(depth_ratio=total_depth_mapq20/total_depth_anymapq)
+p <- maf_joined %>%
+  left_join(depth) %>%
+  ggplot(aes(x=depth_ratio, y=fst)) +
+  geom_point(size=0.2) +
+  geom_smooth() +
+  theme_cowplot()
+ggExtra::ggMarginal(p, type = "histogram", size=5, margins="x")
+maf_joined %>%
+  left_join(depth) %>%
+  ggplot() +
+  geom_histogram(aes(x=depth_ratio, y = (..count..)/sum(..count..)), binwidth = 0.1) +
+  scale_x_continuous(breaks = c(1:10/10), labels = c(1:10/10))
+```
+
+```{r eval=T, fig.width=15, fig.height=3}
+maf_joined %>%
+  left_join(depth) %>%
+  filter(depth_ratio > 0.9) %>%
+  ggplot(aes(x=position/10^6, y=fst)) +
+  geom_point(size = 0.2) +
+  geom_smooth(aes(color=minor)) +
+  facet_grid(~lg, scales = "free_x", space = "free_x") +
+  theme_cowplot() +
+  theme(panel.spacing = unit(0.0, "lines"))
+maf_joined %>%
+  left_join(depth) %>% 
+  filter(depth_ratio > 0.9) %>%
+  summarise(mean_fst=sum(alpha)/sum(beta))
+```
+
+```{r eval=T, fig.width=8, fig.height=2.5}
+depth_filtered_maf <- maf_joined #%>%
+  #left_join(depth) %>%
+  #filter(depth_ratio > 0.8)
+
+bind_rows((filter(depth_filtered_maf, pe_maf<0.01 | pe_maf>0.99) %>% filter(se_maf>0.1 & se_maf<0.9) %>% transmute(major=major, minor=minor, batch = "HiSeq, more degraded")),
+          (filter(depth_filtered_maf, se_maf<0.01 | se_maf>0.99) %>% filter(pe_maf>0.1 & pe_maf<0.9) %>% transmute(major=major, minor=minor, batch = "NextSeq, less degraded"))) %>%
+  mutate(base_substitution = str_c(major, "-to-", minor)) %>%
+  group_by(base_substitution, batch) %>% 
+  count() %>% 
+  ungroup() %>% 
+  group_by(batch) %>%
+  mutate(frequency = n / sum(n)) %>%
+  ungroup() %>%
+  ggplot(aes(x=base_substitution, y=frequency, color=batch, group=batch)) +
+  geom_line() + 
+  geom_point() +
+  scale_color_viridis_d(end=0.75) +
+  theme_bw() +
+  theme(legend.position = "top")
 ```
 
 #### Spot check some outlier SNPs
