--- a/markdown/pca.Rmd
+++ b/markdown/pca.Rmd
@@ -38,6 +38,69 @@ nohup python2 /workdir/programs/pcangsd/pcangsd.py \
 > /workdir/cod/greenland-cod/nohups/run_pcangsd_selection_mincov_contamination_filtered_batch_effect_stringent_filter.nohup &
 ```
 
+## Run PCA excluding private SNPs
+
+#### Come up with a new SNP list
+
+```{r eval=FALSE}
+maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz") %>%
+  transmute(lg = chromo, position = position, major=major, minor = minor, pe_maf = knownEM, pe_nind=nInd)
+
+maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz") %>%
+  transmute(lg = chromo, position = position, major=major, minor = minor, se_maf = knownEM, se_nind=nInd)
+
+maf_joined <- inner_join(maf_pe, maf_se) %>% 
+  mutate(delta=abs(se_maf-pe_maf))
+
+maf_joined_excluding_private <- filter(maf_joined, !((pe_maf<0.01 | pe_maf>0.99)&(se_maf>0.1 & se_maf<0.9))) %>%
+  filter(!((se_maf<0.01 | se_maf>0.99)&(pe_maf>0.1 & pe_maf<0.9)))
+
+anymapq_depth <- read_tsv("../angsd/popminind2/bam_list_realigned_se_anymapq.pos.gz") %>%
+  rename(lg=chr, position=pos, total_depth_anymapq=totDepth)
+mapq20_depth <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.pos.gz") %>%
+  rename(lg=chr, position=pos, total_depth_mapq20=totDepth)
+depth <- inner_join(anymapq_depth, mapq20_depth) %>%
+  mutate(depth_ratio=total_depth_mapq20/total_depth_anymapq)
+
+maf_joined_excluding_private_filtering_depth <- maf_joined_excluding_private %>%
+  left_join(depth) %>%
+  filter(depth_ratio > 0.9)
+  
+original_snp_list <- read_tsv("/workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.txt", col_names = c("lg", "position", "major", "minor")) 
+  
+new_snp_list <- semi_join(original_snp_list, maf_joined_excluding_private_filtering_depth)
+write_tsv(new_snp_list, "../angsd/global_snp_list_private_snps_depth_ratio_filtered.txt", col_names = F)
+```
+
+#### Run ANGSD
+
+```{bash eval=FALSE}
+cd /workdir/batch-effect/
+/workdir/programs/angsd0.931/angsd/angsd sites index /workdir/batch-effect/angsd/global_snp_list_private_snps_depth_ratio_filtered.txt
+nohup /workdir/programs/angsd0.931/angsd/angsd \
+-b sample_lists/bam_list_realigned.txt \
+-anc /workdir/cod/reference_seqs/gadMor3.fasta \
+-out angsd/bam_list_realigned_private_snps_depth_ratio_filtered \
+-GL 1 -doGlf 2 -doMaf 1 -doMajorMinor 3 -doCounts 1 -doDepth 1 -dumpCounts 1 \
+-P 16 -setMinDepth 2 -setMaxDepth 661 -minInd 2 -minQ 20 -minMapQ 20 -minMaf 0.05 \
+-doIBS 2 -makematrix 1 -doCov 1 \
+-sites /workdir/batch-effect/angsd/global_snp_list_private_snps_depth_ratio_filtered.txt \
+-rf /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.chrs \
+>& nohups/get_gl_bam_list_realigned_private_snps_depth_ratio_filtered.log &
+```
+
+#### Run PCAngsd
+
+```{bash eval=FALSE}
+nohup python2 /workdir/programs/pcangsd/pcangsd.py \
+-beagle /workdir/batch-effect/angsd/bam_list_realigned_private_snps_depth_ratio_filtered.beagle.gz \
+-minMaf 0.05 \
+-threads 8 \
+-o /workdir/batch-effect/angsd/bam_list_realigned_private_snps_depth_ratio_filtered_pcangsd \
+> /workdir/batch-effect/nohups/run_pcangsd_private_snps_depth_ratio_filtered.nohup &
+```
+
+
 ## PCA with sliding window trimmed PE samples
 
 ```{r eval=T}
