--- a/markdown/polyg.Rmd
+++ b/markdown/polyg.Rmd
@@ -64,7 +64,7 @@ fastqc /workdir/batch-effect/qual_filtered/IKE2011_976_55124_7_adapter_clipped_q
 ```{r eval=T, fig.width=10, fig.height=5}
 set.seed(0)
 random_sample <- sample_table_unmerged_pe[sample(1:75, 3), ]
-paths <- c("../../cod/greenland-cod/adapter_clipped/", "../polyg_trimmed/", "../qual_filtered/")
+paths <- c("../../cod/greenland-cod/adapter_clipped/", "../polyg_trimmed/", "../cut_right/")
 suffice <- c("_adapter_clipped_f_paired_fastqc", "_adapter_clipped_qual_filtered_f_paired_fastqc", "_adapter_clipped_qual_filtered_f_paired_fastqc")
 types <- c("no trimming", "polyG trimming", "sliding window trimming")
 for (j in 1:3){
@@ -95,8 +95,10 @@ for (j in 1:3){
 per_base_seq_content_polyg_trimmed_final %>%
   mutate(position = as_factor(position)) %>%
   ggplot(aes(x=position, y=percentage, color=base, group=base)) +
-  geom_line() +
-  scale_color_viridis_d(end = 0.9) +
+  geom_line(size=0.8) +
+  #scale_color_viridis_d(end = 0.9) +
+  #scale_color_brewer(palette = "Dark2") +
+  scale_color_manual(values = c("#749dae", "#5445b1", "orange", "#cd3341")) +
   facet_grid(sample_id~type) +
   cowplot::theme_cowplot() +
   theme(axis.text.x = element_blank(),
@@ -127,14 +129,15 @@ for (file in c("../misc/polyg_example.fastq", "../misc/polyg_example_trim_polyg.
     {mutate(., id=seq(nrow(.)))} %>%
     ggplot(aes(x=id, y=0, fill=base)) +
     geom_tile(color="black", size=0.3) +
-    scale_fill_viridis_d(begin = 0.15) +
+    #scale_fill_viridis_d(begin = 0.15) +
+    scale_fill_manual(values = c("#749dae", "#5445b1", "orange", "#cd3341")) +
     theme_void() +
     theme(legend.position = "top")
   print(p)
 }
 ```
 
-```{r eval=T, fig.width=10, fig.height=0.7, dev='svg'}
+```{r eval=T, fig.width=10, fig.height=0.5, dev='svg'}
 for (file in c("../misc/polyg_example.fastq", "../misc/polyg_example_trim_polyg.fastq", "../misc/polyg_example_polyg_cut_right.fastq")){
   quality_vector <- read_lines(file)[4] %>%
     charToRaw() %>%
@@ -142,10 +145,11 @@ for (file in c("../misc/polyg_example.fastq", "../misc/polyg_example_trim_polyg.
     {.-33}
   p <- tibble(quality=quality_vector) %>%
     {mutate(., id=seq(nrow(.)))} %>%
-    ggplot(aes(x=id, y=0, fill=quality)) +
+    ggplot(aes(x=id, y=0, fill=as.factor(quality))) +
     geom_tile(color="black", size=0.3) +
-    scale_fill_viridis_c(option = "A", begin = 0.4) +
+    scale_fill_viridis_d(option = "D", begin = 0.4) +
     theme_void() +
+    labs(fill = "base quality score") +
     theme(legend.position = "bottom")
   print(p)
 }
