revised sample size and coverage figure

--- a/markdown/pipeline.Rmd
+++ b/markdown/pipeline.Rmd
@@ -57,24 +57,31 @@ fastq_list_pe <- filter(sample_table_unmerged, lane_number == 7)$prefix
 fastq_list_se <- filter(sample_table_unmerged, lane_number != 7)$prefix
 
 ## Sample distribution
-sample_table_merged %>%
+sample_size_plot <- sample_table_merged %>%
   mutate(sample_id_corrected=fct_reorder(sample_id_corrected, data_type)) %>%
   ggplot(aes(x=population_new, fill=data_type, group=sample_id_corrected)) +
   geom_bar(color="black") +
+  xlab("population")+
+  ylab("sample size") +
   theme_cowplot() +
-  coord_flip()
-
+  coord_flip() +
+  theme(legend.position = "none")
+sample_size_plot
 ## Number of bases
 base_count <- read_tsv("../sample_lists/count_merged_old.tsv") %>%
   dplyr::select(sample_id_corrected, final_mapped_bases)
-sample_table_merged %>%
+coverage_plot <- sample_table_merged %>%
   left_join(base_count) %>%
   arrange(data_type, desc(final_mapped_bases)) %>%
   mutate(sample_id_corrected=as_factor(sample_id_corrected)) %>%
-  ggplot(aes(x=population_new, y=final_mapped_bases, fill=data_type, group=sample_id_corrected)) +
+  ggplot(aes(x=population_new, y=final_mapped_bases/0.67/10^9, fill=data_type, group=sample_id_corrected)) +
   geom_col(color="black") +
+  scale_fill_discrete(labels=c("NextSeq-150PE", "HiSeq-125PE")) +
+  labs(x="population", y="coverage", fill="batch")+
+  ylab("coverage") +
   theme_cowplot() +
   coord_flip()
+coverage_plot
 sample_table_merged %>%
   left_join(base_count) %>%
   ggplot(aes(x=final_mapped_bases, fill=data_type)) +
@@ -84,6 +91,10 @@ sample_table_merged %>%
   left_join(base_count) %>%
   group_by(data_type) %>%
   summarise(sample_size=n(), avearge_final_coverage=mean(final_mapped_bases)/0.67/10^9)
+```
+
+```{r eval=TRUE, fig.width=15, fig.height=4}
+cowplot::plot_grid(sample_size_plot, coverage_plot, nrow = 1, rel_widths = c(1, 1.2))
 ```
 
 ```{r eval=F}
