--- a/markdown/figures.Rmd
+++ b/markdown/figures.Rmd
@@ -78,7 +78,8 @@ het_plot <- het_gg %>%
         legend.key.size = unit(0.5, 'lines'),
         strip.text.x = element_text(face = "bold", size=20),
         axis.text.y = element_blank(),
-        axis.ticks.y = element_blank())
+        axis.ticks.y = element_blank(),
+        legend.key = element_rect(fill = "white", colour = "black"))
 het_plot
 ```
 
@@ -131,7 +132,8 @@ pca_plot <- pca_combined_select_pops %>%
         panel.border = element_rect(colour="black",size=0.5),
         legend.position = c(0.78, 0.94),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20))
+        strip.text.x = element_text(face = "bold", size=20),
+        legend.key = element_rect(fill = "white", colour = "black"))
 pca_plot
 ```
 
