--- a/markdown/fst.Rmd
+++ b/markdown/fst.Rmd
@@ -93,10 +93,11 @@ depth <- inner_join(anymapq_depth, mapq20_depth) %>%
 p <- maf_joined %>%
   left_join(depth) %>%
   ggplot(aes(x=depth_ratio, y=fst)) +
+  labs(x="depth ratio in HiSeq-125SE batch", y="Fst") +
   geom_point(size=0.2) +
-  geom_smooth() +
+  geom_smooth(se=T) +
   theme_cowplot()
-ggExtra::ggMarginal(p, type = "histogram", size=5, margins="x")
+ggExtra::ggMarginal(p, type = "histogram", size=5, margins="x", fill="white")
 maf_joined %>%
   left_join(depth) %>%
   ggplot() +
@@ -120,27 +121,6 @@ maf_joined %>%
   summarise(mean_fst=sum(alpha)/sum(beta))
 ```
 
-```{r eval=T, fig.width=8, fig.height=2.5}
-depth_filtered_maf <- maf_joined #%>%
-  #left_join(depth) %>%
-  #filter(depth_ratio > 0.8)
-
-bind_rows((filter(depth_filtered_maf, pe_maf<0.01 | pe_maf>0.99) %>% filter(se_maf>0.1 & se_maf<0.9) %>% transmute(major=major, minor=minor, batch = "HiSeq, more degraded")),
-          (filter(depth_filtered_maf, se_maf<0.01 | se_maf>0.99) %>% filter(pe_maf>0.1 & pe_maf<0.9) %>% transmute(major=major, minor=minor, batch = "NextSeq, less degraded"))) %>%
-  mutate(base_substitution = str_c(major, "-to-", minor)) %>%
-  group_by(base_substitution, batch) %>% 
-  count() %>% 
-  ungroup() %>% 
-  group_by(batch) %>%
-  mutate(frequency = n / sum(n)) %>%
-  ungroup() %>%
-  ggplot(aes(x=base_substitution, y=frequency, color=batch, group=batch)) +
-  geom_line() + 
-  geom_point() +
-  scale_color_viridis_d(end=0.75) +
-  theme_bw() +
-  theme(legend.position = "top")
-```
 
 #### Spot check some outlier SNPs
 
